Lab5 sonarlint + sonarcloud.

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sonar.projectKey>55dominik_ivt-lab</sonar.projectKey>
+  		<sonar.organization>55dominik</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
